--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2>What we do</h2>
+        <h3 class="mt-4 mb-4 text-center">Services</h3>
         <div class="row">
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card mb-5">
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card mb-5">
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card mb-5">
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card mb-5">
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
