added service section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
     </ul>
   </div>
 
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-sm-4">
+        <div class="card mb-5">
+          <div class="card-body pb-5 text-center">
+            <h5 class="card-title">Our Vision</h5>
+            <p class="card-text">To be the global giant for cooperative, and digital business transformation to the
+              businesses all over the world.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="card mb-5">
+          <div class="card-body text-center">
+            <h5 class="card-title">Our Mission</h5>
+            <p class="card-text">To ensure quality returns on investments to our esteemed customers through deep
+              forensic market analysis, corporative strategic planning, and business analysis. </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="card mb-5">
+          <div class="card-body text-center">
+            <h5 class="card-title">Our core values</h5>
+            <p class="card-text">Integrity.</p>
+            <p class="card-text">Commitment.</p>
+            <p class="card-text">Excellence.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-12">
       <div class="about-container">
@@ -55,52 +90,75 @@
   </div>
 
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h3 class="mt-4 mb-4 text-center">Services</h3>
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card mb-5">
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card mb-5">
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
+    <h2 class="mt-4 mb-4 text-center">Services</h3>
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Search Engine Optimization</strong></h2>
+          <ul>
+            <li>Google Ads</li>
+          </ul>
         </div>
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Social media and Digital marketing</strong></h2>
+          <ul>
+            <li>Business branding</li>
+            <li>Facebook and Instagram promotions
+            </li>
+            <li>Google Ads
+            </li>
+            <li>Followership generation
+            </li>
+            <li>Interactive video marketing</li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Corporate Business Analysis</strong></h2>
+          <li>Current- Future business process optimization
 
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card mb-5">
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card mb-5">
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
+          </li>
+          <li>Capacity building and assessment
+          </li>
+          <li>Potential Value realization</li>
         </div>
       </div>
-    </div>
+
+
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Market research analysis (Market Intelligence)</strong></h2>
+          <li>Market survey
+          </li>
+          <li>Streamlined marketing
+
+          </li>
+          <li>Email campaign
+          </li>
+          <li>Increased Sales promotion</li>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Web designing</strong></h2>
+          <li>Information website
+          </li>
+          <li>E-commerce website
+          </li>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <h2>
+            <strong>Independent Project Management</strong></h2>
+          <li>Project Planning, initiation, execution, control and monitor, closure.
+          </li>
+          <ul>
+            <li>Project Tracking</li>
+            <li>Cost reduction</li>
+            <li>Project closure</li>
+          </ul>
+        </div>
+      </div>
   </div>
 
   <div class="row">
